--- a/lections/lection_4_arrays_two-dimensional/materials/index.html
+++ b/lections/lection_4_arrays_two-dimensional/materials/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 </body> 
-<!-- <script src="main.js"></script> -->
-<script src="test.js"></script>
+<script src="main.js"></script>
+<!-- <script src="test.js"></script> -->
 </html>
