--- a/lections/lection_17_DOM-BOM/materials/index.html
+++ b/lections/lection_17_DOM-BOM/materials/index.html
@@ -40,11 +40,11 @@
 
   <body style="font-family: monospace" id="body">
     <div class="main container">
-      <span class="target">span</span>
-      <a href="" class="target">anchor</a>
-      <span class="target"> span - another</span>
+      <span class="target"><a href="">LINK</a></span>
+      <!-- <a href="" class="target">anchor</a>
+      <span class="target"> span - another</span> -->
     </div>
-
+    <input type="text" id="login" value="Text from html" />
     <!-- <div class="container">
       <span class="target"> another</span>
     </div> -->
