--- a/lections/lection_17_DOM-BOM/materials/index.html
+++ b/lections/lection_17_DOM-BOM/materials/index.html
@@ -32,6 +32,17 @@
         transition: all 0.3s;
       }
 
+      .hello {
+        width: 500px;
+        height: 500px;
+        border: 10px dashed green;
+      }
+
+      .foo {
+        color: red;
+        background-color: rgb(124, 122, 100, .5);
+      }
+
       * {
         transition: all 2s;
       }
@@ -39,16 +50,17 @@
   </head>
 
   <body style="font-family: monospace" id="body">
-    <div class="main container">
-      <span class="target"><a href="">LINK</a></span>
+    <!-- <div class="main container"> -->
+      <!-- <span class="target"><a href="">LINK</a></span> -->
       <!-- <a href="" class="target">anchor</a>
       <span class="target"> span - another</span> -->
     </div>
-    <input type="text" id="login" value="Text from html" />
+    <!-- <input type="text" id="login" value="Text from html" /> -->
     <!-- <div class="container">
       <span class="target"> another</span>
     </div> -->
     <!-- hello world -->
+    <div class="box"></div>
   </body>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
 </html>
