--- a/lections/lection_28_vuejs_components/materials/index.html
+++ b/lections/lection_28_vuejs_components/materials/index.html
@@ -35,11 +35,13 @@
 <body >
 
     <div id="app" >
-        <parent-component></parent-component>
+        <!-- <parent-component></parent-component> -->
+
+        {{ name }}
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="comp.js"></script>
+    <script src="main.js"></script>
     <!-- <script src="custom-select.js"></script> -->
 </body >
 </html>
